--- a/Softwave/fiveBBS/MDK-ARM/fiveBBS.uvprojx
+++ b/Softwave/fiveBBS/MDK-ARM/fiveBBS.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103xE</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;../Middlewares/easylogger/inc;../Debug;../Middlewares/SEEGGER/Config;../Middlewares/SEEGGER/RTT;../BSP/Button;../BSP/ili9341_LCD;../BSP/LED;../Middlewares/Function;..\BSP\Platform_Interface\Button;..\Platform</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;../Middlewares/easylogger/inc;../Debug;../Middlewares/SEEGGER/Config;../Middlewares/SEEGGER/RTT;../BSP/Button;../BSP/ili9341_LCD;../BSP/LED;../Middlewares/Function;..\BSP\Platform_Interface\Button;..\APP_Platform\User_Init;..\OS_Platform\OS_Wrapper\inc;..\OS_Platform\OS_Implementation\FreeRTOS\inc;..\Middlewares\os_adapter\inc;..\APP_Platform\User_Init\Platform_IO_Register;..\APP_Platform\User_Init\User_Task_Config;..\MCU_Platform\MCU_Core_GPIO;..\MCU_Platform\MCU_Core_IIC;..\MCU_Platform\MCU_Core_SPI;..\MCU_Platform\Protocol_adaper_Port</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -590,16 +590,6 @@
           <GroupName>BSP</GroupName>
           <Files>
             <File>
-              <FileName>bsp_ili9341_LCD_drive.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\BSP\ili9341_LCD\bsp_ili9341_LCD_drive.c</FilePath>
-            </File>
-            <File>
-              <FileName>bsp_ili9341_LCD_handle.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\BSP\ili9341_LCD\bsp_ili9341_LCD_handle.c</FilePath>
-            </File>
-            <File>
               <FileName>bsp_LED.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\BSP\LED\bsp_LED.c</FilePath>
@@ -680,9 +670,114 @@
           <GroupName>APP/User_App</GroupName>
           <Files>
             <File>
+              <FileName>user_init.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\APP_Platform\User_Init\user_init.c</FilePath>
+            </File>
+            <File>
+              <FileName>user_task_reso_config.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\APP_Platform\User_Init\User_Task_Config\user_task_reso_config.c</FilePath>
+            </File>
+            <File>
               <FileName>user_periph_setup.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\Platform\user_periph_setup.c</FilePath>
+              <FilePath>..\APP_Platform\User_Init\Platform_IO_Register\user_periph_setup.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>OS_Platform/OS_Wrapper</GroupName>
+          <Files>
+            <File>
+              <FileName>osal_heap.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Wrapper\src\osal_heap.c</FilePath>
+            </File>
+            <File>
+              <FileName>osal_mutex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Wrapper\src\osal_mutex.c</FilePath>
+            </File>
+            <File>
+              <FileName>osal_queue.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Wrapper\src\osal_queue.c</FilePath>
+            </File>
+            <File>
+              <FileName>osal_sema.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Wrapper\src\osal_sema.c</FilePath>
+            </File>
+            <File>
+              <FileName>osal_task.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Wrapper\src\osal_task.c</FilePath>
+            </File>
+            <File>
+              <FileName>osal_timer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Wrapper\src\osal_timer.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>OS_Platform/OS_Implementation</GroupName>
+          <Files>
+            <File>
+              <FileName>os_impl_heap.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Implementation\FreeRTOS\src\os_impl_heap.c</FilePath>
+            </File>
+            <File>
+              <FileName>os_impl_mutex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Implementation\FreeRTOS\src\os_impl_mutex.c</FilePath>
+            </File>
+            <File>
+              <FileName>os_impl_queue.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Implementation\FreeRTOS\src\os_impl_queue.c</FilePath>
+            </File>
+            <File>
+              <FileName>os_impl_sema.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Implementation\FreeRTOS\src\os_impl_sema.c</FilePath>
+            </File>
+            <File>
+              <FileName>os_impl_task.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Implementation\FreeRTOS\src\os_impl_task.c</FilePath>
+            </File>
+            <File>
+              <FileName>os_impl_timer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\OS_Platform\OS_Implementation\FreeRTOS\src\os_impl_timer.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>MCU_Platform/Device_adaper_Port</GroupName>
+          <Files>
+            <File>
+              <FileName>gpio_port.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\MCU_Platform\MCU_Core_GPIO\gpio_port.c</FilePath>
+            </File>
+            <File>
+              <FileName>i2c_port.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\MCU_Platform\MCU_Core_IIC\i2c_port.c</FilePath>
+            </File>
+            <File>
+              <FileName>spi_port.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\MCU_Platform\MCU_Core_SPI\spi_port.c</FilePath>
+            </File>
+            <File>
+              <FileName>Protocol_adaper_Port.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\MCU_Platform\Protocol_adaper_Port\Protocol_adaper_Port.c</FilePath>
             </File>
           </Files>
         </Group>
